--- a/.env
+++ b/.env
@@ -1,7 +1,1 @@
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
-
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-
-DATABASE_URL="file:./dev.db"
+DATABASE_URL='mysql://6rsmwhex1e5al6ialngy:pscale_pw_wwuTjMStno5tVTFaqxj8rwJYWUcBmOzmnPIsLvYnN5p@aws.connect.psdb.cloud/fermented?sslaccept=strict'
