feature(cleint): add reg/auth forms

--- a/.env
+++ b/.env
@@ -1,1 +1,12 @@
+GOOGLE_CLIENT_ID=1046615078606-uvo11o604o6hmdc3qvupbdfvnrrv1iia.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+
+YANDEX_CLIENT_ID=74420af1a3dd46aca0e740ddf3359b84
+YANDEX_CLIENT_SECRET=f19d70261a5a4a939faf6a7f70cbccb0
+
+VK_CLIENT_ID=51704782
+VK_CLIENT_SECRET=g4Vf6nZcQz7BwXmQkccg
+
+NEXTAUTH_SECRET=hello_darkness_my_old_friend
+
 DATABASE_URL='mysql://6rsmwhex1e5al6ialngy:pscale_pw_wwuTjMStno5tVTFaqxj8rwJYWUcBmOzmnPIsLvYnN5p@aws.connect.psdb.cloud/fermented?sslaccept=strict'
